@@ -1,3 +1,7 @@
+2006-12-08 Tim
+ PATCH: [ 1610448 ] Manual: Requirements section and layout changes for Plugins
+  Manual: Plugins.xml
+
 2006-12-05 Kimmo
  PATCH: [ 1608705 ] Manual: Fix indexterms in Folder Compare
   Manual: Compare_dirs.xml
